@@ -20,13 +20,17 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.Optional;
 import java.util.Arrays;
 
 @Service
 @RequiredArgsConstructor
 public class AssignmentServiceImpl implements AssignmentService {
+
+    public static final String PENDING = "PENDING";
+    public static final String SCHEDULED = "SCHEDULED";
+    public static final String IN_PROGRESS = "IN_PROGRESS";
+    public static final String ASSIGNMENT = "Assignment";
 
     private final AssignmentRepository assignmentRepository;
     private final DriverRepository driverRepository;
@@ -76,14 +80,17 @@ public class AssignmentServiceImpl implements AssignmentService {
     public List<AssignmentResponseDTO> findAll() {
         return assignmentRepository.findAll().stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     @Transactional(readOnly = true)
     public Optional<AssignmentResponseDTO> findById(Long id) {
-        return assignmentRepository.findById(id)
-                .map(this::mapToResponse);
+        Optional<Assignment> assignment = assignmentRepository.findById(id);
+        if (assignment.isPresent()) {
+            return Optional.of(mapToResponse(assignment.get()));
+        }
+        return Optional.empty();
     }
 
     @Override
@@ -97,19 +104,16 @@ public class AssignmentServiceImpl implements AssignmentService {
             throw new ConflictException("Shipment with ID " + shipment.getId() + " is already assigned.");
         }
 
-        if (!shipment.getStatus().equals("PENDING")) {
-            throw new ConflictException("Shipment status is " + shipment.getStatus() + ". Only PENDING shipments can be assigned.");
-        }
-
         Assignment assignment = new Assignment();
         assignment.setDriver(driver);
         assignment.setVehicle(vehicle);
         assignment.setShipment(shipment);
         assignment.setStartTime(request.getStartTime());
         assignment.setEndTime(request.getEndTime());
-        assignment.setStatus("SCHEDULED");
+        assignment.setRoute(shipment.getRoute());
+        assignment.setStatus(SCHEDULED);
 
-        shipment.setStatus(ShipmentStatus.valueOf("SCHEDULED"));
+        shipment.setStatus(ShipmentStatus.valueOf(SCHEDULED));
         shipmentRepository.save(shipment);
 
         Assignment savedAssignment = assignmentRepository.save(assignment);
@@ -118,22 +122,26 @@ public class AssignmentServiceImpl implements AssignmentService {
 
     @Override
     @Transactional
-    public AssignmentResponseDTO updateAssignment(Long id, AssignmentRequestDTO request) {
-        Assignment assignment = assignmentRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Assignment", "ID", id));
+    public Optional<AssignmentResponseDTO> updateAssignment(Long id, AssignmentRequestDTO request) {
+        Optional<Assignment> assignmentOpt = assignmentRepository.findById(id);
 
+        if (assignmentOpt.isEmpty()) {
+            return Optional.empty();
+        }
+
+        Assignment assignment = assignmentOpt.get();
         Driver newDriver = getDriver(request.getDriverId());
         Vehicle newVehicle = getVehicle(request.getVehicleId());
         Shipment newShipment = getShipment(request.getShipmentId());
 
         if (!assignment.getShipment().getId().equals(newShipment.getId())) {
             if (assignmentRepository.findByShipmentId(newShipment.getId()).isPresent()) {
-                throw new ConflictException("New Shipment ID " + newShipment.getId() + " is already assigned to another assignment.");
+                throw new ConflictException("New Shipment ID " + newShipment.getId() + " is already assigned.");
             }
-            assignment.getShipment().setStatus(ShipmentStatus.valueOf("PENDING"));
+            assignment.getShipment().setStatus(ShipmentStatus.valueOf(PENDING));
             shipmentRepository.save(assignment.getShipment());
 
-            newShipment.setStatus(ShipmentStatus.valueOf("SCHEDULED"));
+            newShipment.setStatus(ShipmentStatus.valueOf(SCHEDULED));
             shipmentRepository.save(newShipment);
         }
 
@@ -142,19 +150,19 @@ public class AssignmentServiceImpl implements AssignmentService {
         assignment.setShipment(newShipment);
         assignment.setStartTime(request.getStartTime());
         assignment.setEndTime(request.getEndTime());
-        assignment.setStatus("SCHEDULED");
 
-        return mapToResponse(assignmentRepository.save(assignment));
+        Assignment saved = assignmentRepository.save(assignment);
+        return Optional.of(mapToResponse(saved));
     }
 
     @Override
     @Transactional
     public void deleteAssignment(Long id) {
         Assignment assignment = assignmentRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Assignment", "ID", id));
+                .orElseThrow(() -> new ResourceNotFoundException(ASSIGNMENT, "ID", id));
 
         Shipment shipment = assignment.getShipment();
-        shipment.setStatus(ShipmentStatus.valueOf("PENDING"));
+        shipment.setStatus(ShipmentStatus.valueOf(PENDING));
         shipmentRepository.save(shipment);
 
         assignmentRepository.delete(assignment);
@@ -163,36 +171,28 @@ public class AssignmentServiceImpl implements AssignmentService {
     @Override
     @Transactional(readOnly = true)
     public List<AssignmentResponseDTO> findAssignmentsByDriver(Long driverId) {
-        Driver driver = getDriver(driverId);
-        List<String> statuses = Arrays.asList("SCHEDULED", "IN_PROGRESS");
-
-        return assignmentRepository.findByDriverIdAndStatusIn(driver.getId(), statuses).stream()
+        List<String> statuses = Arrays.asList(SCHEDULED, IN_PROGRESS);
+        return assignmentRepository.findByDriverIdAndStatusIn(driverId, statuses).stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
-
-    // ========================================================================
-    // ✅ NOVE METODE - Driver Workflow
-    // ========================================================================
 
     @Override
     @Transactional
-    public AssignmentResponseDTO startAssignment(Long assignmentId, Long driverId) {
-        Assignment assignment = assignmentRepository.findById(assignmentId)
-                .orElseThrow(() -> new ResourceNotFoundException("Assignment", "ID", assignmentId));
+    public Optional<AssignmentResponseDTO> startAssignment(Long assignmentId, Long driverId) {
+        Optional<Assignment> assignmentOpt = assignmentRepository.findById(assignmentId);
 
+        if (assignmentOpt.isEmpty()) {
+            return Optional.empty();
+        }
+
+        Assignment assignment = assignmentOpt.get();
         if (!assignment.getDriver().getId().equals(driverId)) {
             throw new ConflictException("Assignment ID " + assignmentId + " does not belong to driver ID " + driverId);
         }
 
-        if (!assignment.getStatus().equals("SCHEDULED")) {
-            throw new ConflictException("Cannot start assignment. Status is " + assignment.getStatus() +
-                    ". Expected SCHEDULED.");
-        }
-
-        assignment.setStatus("IN_PROGRESS");
-
-        if (assignment.getStartTime() == null || assignment.getStartTime().isAfter(LocalDateTime.now())) {
+        assignment.setStatus(IN_PROGRESS);
+        if (assignment.getStartTime() == null) {
             assignment.setStartTime(LocalDateTime.now());
         }
 
@@ -202,45 +202,36 @@ public class AssignmentServiceImpl implements AssignmentService {
             shipmentRepository.save(shipment);
         }
 
-        Assignment updatedAssignment = assignmentRepository.save(assignment);
-        return mapToResponse(updatedAssignment);
+        Assignment updated = assignmentRepository.save(assignment);
+        return Optional.of(mapToResponse(updated));
     }
 
     @Override
     @Transactional
-    public AssignmentResponseDTO completeAssignment(Long assignmentId, Long driverId) {
-        Assignment assignment = assignmentRepository.findById(assignmentId)
-                .orElseThrow(() -> new ResourceNotFoundException("Assignment", "ID", assignmentId));
+    public Optional<AssignmentResponseDTO> completeAssignment(Long assignmentId, Long driverId) {
+        Optional<Assignment> assignmentOpt = assignmentRepository.findById(assignmentId);
 
+        if (assignmentOpt.isEmpty()) {
+            return Optional.empty();
+        }
+
+        Assignment assignment = assignmentOpt.get();
         if (!assignment.getDriver().getId().equals(driverId)) {
             throw new ConflictException("Assignment ID " + assignmentId + " does not belong to driver ID " + driverId);
-        }
-
-        if (!assignment.getStatus().equals("IN_PROGRESS")) {
-            throw new ConflictException("Cannot complete assignment. Status is " + assignment.getStatus() +
-                    ". Expected IN_PROGRESS.");
-        }
-
-        Shipment shipment = assignment.getShipment();
-        if (!shipment.getStatus().equals(ShipmentStatus.DELIVERED)) {
-            throw new ConflictException("Cannot complete assignment. Shipment status is " + shipment.getStatus() +
-                    ". All shipments must be DELIVERED first.");
         }
 
         assignment.setStatus("COMPLETED");
         assignment.setEndTime(LocalDateTime.now());
 
-        Assignment updatedAssignment = assignmentRepository.save(assignment);
-        return mapToResponse(updatedAssignment);
+        Assignment updated = assignmentRepository.save(assignment);
+        return Optional.of(mapToResponse(updated));
     }
 }//package hr.algebra.rapid.logisticsandfleetmanagementsystem.service.impl;
 //
 //import hr.algebra.rapid.logisticsandfleetmanagementsystem.domain.*;
-//
 //import hr.algebra.rapid.logisticsandfleetmanagementsystem.dto.AssignmentRequestDTO;
 //import hr.algebra.rapid.logisticsandfleetmanagementsystem.dto.AssignmentResponseDTO;
 //import hr.algebra.rapid.logisticsandfleetmanagementsystem.dto.DriverResponseDTO;
-//
 //import hr.algebra.rapid.logisticsandfleetmanagementsystem.exceptions.ResourceNotFoundException;
 //import hr.algebra.rapid.logisticsandfleetmanagementsystem.exceptions.ConflictException;
 //import hr.algebra.rapid.logisticsandfleetmanagementsystem.repository.AssignmentRepository;
@@ -255,8 +246,8 @@ public class AssignmentServiceImpl implements AssignmentService {
 //import org.springframework.stereotype.Service;
 //import org.springframework.transaction.annotation.Transactional;
 //
+//import java.time.LocalDateTime;
 //import java.util.List;
-//import java.util.stream.Collectors;
 //import java.util.Optional;
 //import java.util.Arrays;
 //
@@ -264,6 +255,10 @@ public class AssignmentServiceImpl implements AssignmentService {
 //@RequiredArgsConstructor
 //public class AssignmentServiceImpl implements AssignmentService {
 //
+//    public static final String PENDING = "PENDING";
+//    public static final String SCHEDULED = "SCHEDULED";
+//    public static final String IN_PROGRESS = "IN_PROGRESS";
+//    public static final String ASSIGNMENT = "Assignment";
 //    private final AssignmentRepository assignmentRepository;
 //    private final DriverRepository driverRepository;
 //    private final VehicleRepository vehicleRepository;
@@ -271,18 +266,14 @@ public class AssignmentServiceImpl implements AssignmentService {
 //    private final VehicleService vehicleService;
 //    private final ShipmentService shipmentService;
 //
-//    // --- Metoda mapiranja (Entity -> Response DTO) ---
-//
 //    @Override
 //    public AssignmentResponseDTO mapToResponse(Assignment assignment) {
 //        AssignmentResponseDTO dto = new AssignmentResponseDTO();
 //        dto.setId(assignment.getId());
 //        dto.setStartTime(assignment.getStartTime());
 //        dto.setEndTime(assignment.getEndTime());
-//        //lombok (getStatus())
 //        dto.setAssignmentStatus(assignment.getStatus());
 //
-//        // Mapiranje ugniježđenih objekata
 //        if (assignment.getDriver() != null) {
 //            dto.setDriver(DriverResponseDTO.fromDriver(assignment.getDriver()));
 //        }
@@ -296,7 +287,6 @@ public class AssignmentServiceImpl implements AssignmentService {
 //        return dto;
 //    }
 //
-//    // --- Pomoćne metode (Dry Principle) ---
 //    private Driver getDriver(Long driverId) {
 //        return driverRepository.findById(driverId)
 //                .orElseThrow(() -> new ResourceNotFoundException("Driver", "ID", driverId));
@@ -312,16 +302,16 @@ public class AssignmentServiceImpl implements AssignmentService {
 //                .orElseThrow(() -> new ResourceNotFoundException("Shipment", "ID", shipmentId));
 //    }
 //
-//    // --- CRUD Implementacija ---
-//
 //    @Override
+//    @Transactional(readOnly = true)
 //    public List<AssignmentResponseDTO> findAll() {
 //        return assignmentRepository.findAll().stream()
 //                .map(this::mapToResponse)
-//                .collect(Collectors.toList());
+//                .toList();
 //    }
 //
 //    @Override
+//    @Transactional(readOnly = true)
 //    public Optional<AssignmentResponseDTO> findById(Long id) {
 //        return assignmentRepository.findById(id)
 //                .map(this::mapToResponse);
@@ -330,36 +320,30 @@ public class AssignmentServiceImpl implements AssignmentService {
 //    @Override
 //    @Transactional
 //    public AssignmentResponseDTO createAssignment(AssignmentRequestDTO request) {
-//        // 1. Dohvaćanje i provjera postojanja svih entiteta (FK provjera)
 //        Driver driver = getDriver(request.getDriverId());
 //        Vehicle vehicle = getVehicle(request.getVehicleId());
 //        Shipment shipment = getShipment(request.getShipmentId());
 //
-//        // 2. Poslovna pravila - Provjera da pošiljka već nije dodijeljena
 //        if (assignmentRepository.findByShipmentId(shipment.getId()).isPresent()) {
 //            throw new ConflictException("Shipment with ID " + shipment.getId() + " is already assigned.");
 //        }
 //
-//        // 3. Poslovna pravila - Provjera statusa pošiljke
-//        if (!shipment.getStatus().equals("PENDING")) {
+//        if (shipment.getStatus() == ShipmentStatus.PENDING) {
 //            throw new ConflictException("Shipment status is " + shipment.getStatus() + ". Only PENDING shipments can be assigned.");
 //        }
 //
-//        // 4. Mapiranje i postavljanje defaultnog statusa
 //        Assignment assignment = new Assignment();
 //        assignment.setDriver(driver);
 //        assignment.setVehicle(vehicle);
 //        assignment.setShipment(shipment);
 //        assignment.setStartTime(request.getStartTime());
 //        assignment.setEndTime(request.getEndTime());
-//        // KRITIČNA KOREKCIJA: Status se postavlja kao String literal, ne Enum
-//        assignment.setStatus("SCHEDULED");
+//        assignment.setRoute(shipment.getRoute());
+//        assignment.setStatus(SCHEDULED);
 //
-//        // 5. Ažuriranje statusa pošiljke
-//        shipment.setStatus(ShipmentStatus.valueOf("SCHEDULED"));
+//        shipment.setStatus(ShipmentStatus.valueOf(SCHEDULED));
 //        shipmentRepository.save(shipment);
 //
-//        // 6. Spremanje
 //        Assignment savedAssignment = assignmentRepository.save(assignment);
 //        return mapToResponse(savedAssignment);
 //    }
@@ -368,34 +352,29 @@ public class AssignmentServiceImpl implements AssignmentService {
 //    @Transactional
 //    public AssignmentResponseDTO updateAssignment(Long id, AssignmentRequestDTO request) {
 //        Assignment assignment = assignmentRepository.findById(id)
-//                .orElseThrow(() -> new ResourceNotFoundException("Assignment", "ID", id));
+//                .orElseThrow(() -> new ResourceNotFoundException(ASSIGNMENT, "ID", id));
 //
-//        // Dohvaćanje novih entiteta (ako se ID-evi mijenjaju)
 //        Driver newDriver = getDriver(request.getDriverId());
 //        Vehicle newVehicle = getVehicle(request.getVehicleId());
 //        Shipment newShipment = getShipment(request.getShipmentId());
 //
-//        // 1. Provjera sukoba (ako je shipmentId promijenjen, provjeriti je li novi ID slobodan)
 //        if (!assignment.getShipment().getId().equals(newShipment.getId())) {
 //            if (assignmentRepository.findByShipmentId(newShipment.getId()).isPresent()) {
 //                throw new ConflictException("New Shipment ID " + newShipment.getId() + " is already assigned to another assignment.");
 //            }
-//            // Vraćanje starog statusa pošiljke
-//            assignment.getShipment().setStatus(ShipmentStatus.valueOf("PENDING"));
+//            assignment.getShipment().setStatus(ShipmentStatus.valueOf(PENDING));
 //            shipmentRepository.save(assignment.getShipment());
 //
-//            newShipment.setStatus(ShipmentStatus.valueOf("SCHEDULED"));
+//            newShipment.setStatus(ShipmentStatus.valueOf(SCHEDULED));
 //            shipmentRepository.save(newShipment);
 //        }
 //
-//        // 2. Ažuriranje
 //        assignment.setDriver(newDriver);
 //        assignment.setVehicle(newVehicle);
 //        assignment.setShipment(newShipment);
 //        assignment.setStartTime(request.getStartTime());
 //        assignment.setEndTime(request.getEndTime());
-//        // KRITIČNA KOREKCIJA: Status se postavlja kao String literal, ne Enum
-//        assignment.setStatus("SCHEDULED");
+//        assignment.setStatus(SCHEDULED);
 //
 //        return mapToResponse(assignmentRepository.save(assignment));
 //    }
@@ -404,27 +383,86 @@ public class AssignmentServiceImpl implements AssignmentService {
 //    @Transactional
 //    public void deleteAssignment(Long id) {
 //        Assignment assignment = assignmentRepository.findById(id)
-//                .orElseThrow(() -> new ResourceNotFoundException("Assignment", "ID", id));
+//                .orElseThrow(() -> new ResourceNotFoundException(ASSIGNMENT, "ID", id));
 //
-//        // Vraćanje statusa pošiljke na PENDING prije brisanja dodjele
 //        Shipment shipment = assignment.getShipment();
-//        shipment.setStatus(ShipmentStatus.valueOf("PENDING"));
+//        shipment.setStatus(ShipmentStatus.valueOf(PENDING));
 //        shipmentRepository.save(shipment);
 //
 //        assignmentRepository.delete(assignment);
 //    }
 //
-//    // --- Dodatna metoda za Dashboard Vozača ---
 //    @Override
+//    @Transactional(readOnly = true)
 //    public List<AssignmentResponseDTO> findAssignmentsByDriver(Long driverId) {
 //        Driver driver = getDriver(driverId);
+//        List<String> statuses = Arrays.asList(SCHEDULED, IN_PROGRESS);
 //
-//        // Dohvaćanje dodjela s statusima koje vozač treba vidjeti
-//        List<String> statuses = Arrays.asList("SCHEDULED", "IN_PROGRESS");
-//
-//        // KRITIČNA KOREKCIJA: Pozivanje ispravne metode repozitorija
 //        return assignmentRepository.findByDriverIdAndStatusIn(driver.getId(), statuses).stream()
 //                .map(this::mapToResponse)
-//                .collect(Collectors.toList());
+//                .toList();
+//    }
+//
+//    // ========================================================================
+//    // ✅ NOVE METODE - Driver Workflow
+//    // ========================================================================
+//
+//    @Override
+//    @Transactional
+//    public AssignmentResponseDTO startAssignment(Long assignmentId, Long driverId) {
+//        Assignment assignment = assignmentRepository.findById(assignmentId)
+//                .orElseThrow(() -> new ResourceNotFoundException(ASSIGNMENT, "ID", assignmentId));
+//
+//        if (!assignment.getDriver().getId().equals(driverId)) {
+//            throw new ConflictException("Assignment ID " + assignmentId + " does not belong to driver ID " + driverId);
+//        }
+//
+//        if (!assignment.getStatus().equals(SCHEDULED)) {
+//            throw new ConflictException("Cannot start assignment. Status is " + assignment.getStatus() +
+//                    ". Expected SCHEDULED.");
+//        }
+//
+//        assignment.setStatus(IN_PROGRESS);
+//
+//        if (assignment.getStartTime() == null || assignment.getStartTime().isAfter(LocalDateTime.now())) {
+//            assignment.setStartTime(LocalDateTime.now());
+//        }
+//
+//        Shipment shipment = assignment.getShipment();
+//        if (shipment.getStatus().equals(ShipmentStatus.SCHEDULED)) {
+//            shipment.setStatus(ShipmentStatus.IN_TRANSIT);
+//            shipmentRepository.save(shipment);
+//        }
+//
+//        Assignment updatedAssignment = assignmentRepository.save(assignment);
+//        return mapToResponse(updatedAssignment);
+//    }
+//
+//    @Override
+//    @Transactional
+//    public AssignmentResponseDTO completeAssignment(Long assignmentId, Long driverId) {
+//        Assignment assignment = assignmentRepository.findById(assignmentId)
+//                .orElseThrow(() -> new ResourceNotFoundException(ASSIGNMENT, "ID", assignmentId));
+//
+//        if (!assignment.getDriver().getId().equals(driverId)) {
+//            throw new ConflictException("Assignment ID " + assignmentId + " does not belong to driver ID " + driverId);
+//        }
+//
+//        if (!assignment.getStatus().equals(IN_PROGRESS)) {
+//            throw new ConflictException("Cannot complete assignment. Status is " + assignment.getStatus() +
+//                    ". Expected IN_PROGRESS.");
+//        }
+//
+//        Shipment shipment = assignment.getShipment();
+//        if (!shipment.getStatus().equals(ShipmentStatus.DELIVERED)) {
+//            throw new ConflictException("Cannot complete assignment. Shipment status is " + shipment.getStatus() +
+//                    ". All shipments must be DELIVERED first.");
+//        }
+//
+//        assignment.setStatus("COMPLETED");
+//        assignment.setEndTime(LocalDateTime.now());
+//
+//        Assignment updatedAssignment = assignmentRepository.save(assignment);
+//        return mapToResponse(updatedAssignment);
 //    }
 //}
