@@ -9,29 +9,37 @@ import hr.algebra.rapid.logisticsandfleetmanagementsystem.dto.ShipmentResponse;
 import hr.algebra.rapid.logisticsandfleetmanagementsystem.exceptions.ConflictException;
 import hr.algebra.rapid.logisticsandfleetmanagementsystem.exceptions.ResourceNotFoundException;
 import hr.algebra.rapid.logisticsandfleetmanagementsystem.exceptions.DuplicateResourceException;
-import hr.algebra.rapid.logisticsandfleetmanagementsystem.domain.Route; // NOVO
-import hr.algebra.rapid.logisticsandfleetmanagementsystem.domain.ShipmentStatus; // NOVO
+import hr.algebra.rapid.logisticsandfleetmanagementsystem.domain.Route;
+import hr.algebra.rapid.logisticsandfleetmanagementsystem.domain.ShipmentStatus;
 import hr.algebra.rapid.logisticsandfleetmanagementsystem.repository.AssignmentRepository;
 import hr.algebra.rapid.logisticsandfleetmanagementsystem.repository.ShipmentRepository;
-import hr.algebra.rapid.logisticsandfleetmanagementsystem.service.RouteService; // NOVO
+import hr.algebra.rapid.logisticsandfleetmanagementsystem.service.RouteService;
 import hr.algebra.rapid.logisticsandfleetmanagementsystem.service.ShipmentService;
 import lombok.RequiredArgsConstructor;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+
 
 @Service
 @RequiredArgsConstructor
 public class ShipmentServiceImpl implements ShipmentService {
 
+    public static final String SHIPMENT = "Shipment";
+    public static final String SHIPMENT_ID = "Shipment ID ";
+    public static final String IS_NOT_ASSIGNED_TO_ANY_DRIVER = " is not assigned to any driver.";
+
+    private static final Logger logger = LoggerFactory.getLogger(ShipmentServiceImpl.class);
+
     private final ShipmentRepository shipmentRepository;
     private final RouteService routeService;
     private final AssignmentRepository assignmentRepository;
-    // --- Metoda mapiranja (Entity -> Response DTO) - AŽURIRANA ---
 
+    // --- Metoda mapiranja (Entity -> Response DTO) - AŽURIRANA ---
     @Override
     public ShipmentResponse mapToResponse(Shipment shipment) {
         ShipmentResponse dto = new ShipmentResponse();
@@ -78,7 +86,7 @@ public class ShipmentServiceImpl implements ShipmentService {
     public List<ShipmentResponse> findAll() {
         return shipmentRepository.findAll().stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -133,7 +141,7 @@ public class ShipmentServiceImpl implements ShipmentService {
     public ShipmentResponse updateShipment(Long id, ShipmentRequest request) {
         // 1. Pronađi pošiljku
         Shipment shipment = shipmentRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Shipment", "ID", id));
+                .orElseThrow(() -> new ResourceNotFoundException(SHIPMENT, "ID", id));
 
         // 2. Provjera jedinstvenosti za update
         Optional<Shipment> existingShipment = shipmentRepository.findByTrackingNumber(request.getTrackingNumber());
@@ -175,7 +183,8 @@ public class ShipmentServiceImpl implements ShipmentService {
             try {
                 ShipmentStatus newStatus = ShipmentStatus.valueOf(request.getStatus().toUpperCase());
                 shipment.setStatus(newStatus);
-            } catch (IllegalArgumentException e) {
+            } catch (IllegalArgumentException err) {
+                logger.error(err.getMessage(), err);
                 throw new IllegalArgumentException("Neispravan status pošiljke: " + request.getStatus());
             }
         }
@@ -188,7 +197,7 @@ public class ShipmentServiceImpl implements ShipmentService {
     @Transactional
     public void deleteShipment(Long id) {
         if (!shipmentRepository.existsById(id)) {
-            throw new ResourceNotFoundException("Shipment", "ID", id);
+            throw new ResourceNotFoundException(SHIPMENT, "ID", id);
         }
         shipmentRepository.deleteById(id);
     }
@@ -201,14 +210,14 @@ public class ShipmentServiceImpl implements ShipmentService {
     public ShipmentResponse startDelivery(Long shipmentId, Long driverId) {
         // 1. Dohvati Shipment
         Shipment shipment = shipmentRepository.findById(shipmentId)
-                .orElseThrow(() -> new ResourceNotFoundException("Shipment", "ID", shipmentId));
+                .orElseThrow(() -> new ResourceNotFoundException(SHIPMENT, "ID", shipmentId));
 
         // 2. Provjeri je li Shipment assigniran ovom Driver-u
         Assignment assignment = assignmentRepository.findByShipmentId(shipmentId)
-                .orElseThrow(() -> new ConflictException("Shipment ID " + shipmentId + " is not assigned to any driver."));
+                .orElseThrow(() -> new ConflictException(SHIPMENT_ID + shipmentId + IS_NOT_ASSIGNED_TO_ANY_DRIVER));
 
         if (!assignment.getDriver().getId().equals(driverId)) {
-            throw new ConflictException("Shipment ID " + shipmentId + " is not assigned to driver ID " + driverId);
+            throw new ConflictException(SHIPMENT_ID + shipmentId + " is not assigned to driver ID " + driverId);
         }
 
         // 3. Provjeri status (mora biti SCHEDULED)
@@ -235,14 +244,14 @@ public class ShipmentServiceImpl implements ShipmentService {
     public ShipmentResponse completeDelivery(Long shipmentId, Long driverId, ProofOfDeliveryDTO pod) {
         // 1. Dohvati Shipment
         Shipment shipment = shipmentRepository.findById(shipmentId)
-                .orElseThrow(() -> new ResourceNotFoundException("Shipment", "ID", shipmentId));
+                .orElseThrow(() -> new ResourceNotFoundException(SHIPMENT, "ID", shipmentId));
 
         // 2. Provjeri je li Shipment assigniran ovom Driver-u
         Assignment assignment = assignmentRepository.findByShipmentId(shipmentId)
-                .orElseThrow(() -> new ConflictException("Shipment ID " + shipmentId + " is not assigned to any driver."));
+                .orElseThrow(() -> new ConflictException(SHIPMENT_ID + shipmentId + IS_NOT_ASSIGNED_TO_ANY_DRIVER));
 
         if (!assignment.getDriver().getId().equals(driverId)) {
-            throw new ConflictException("Shipment ID " + shipmentId + " is not assigned to driver ID " + driverId);
+            throw new ConflictException(SHIPMENT_ID + shipmentId + " is not assigned to driver ID " + driverId);
         }
 
         // 3. Provjeri status (mora biti IN_TRANSIT)
@@ -254,23 +263,28 @@ public class ShipmentServiceImpl implements ShipmentService {
         // 4. Promijeni status
         shipment.setStatus(ShipmentStatus.DELIVERED);
 
-        // 5. Spremi POD podatke kao komentar (ako Shipment ima notes polje)
-        // NAPOMENA: Ako nemaš 'notes' polje, možeš zakomentirati ovaj dio ili kreirati ProofOfDelivery entitet
-        StringBuilder podNotes = new StringBuilder();
-        podNotes.append("DELIVERED by Driver ID: ").append(driverId).append("\n");
-        podNotes.append("Recipient: ").append(pod.getRecipientName()).append("\n");
-        if (pod.getNotes() != null) {
-            podNotes.append("Notes: ").append(pod.getNotes()).append("\n");
-        }
-        if (pod.getLatitude() != null && pod.getLongitude() != null) {
-            podNotes.append("GPS: ").append(pod.getLatitude()).append(", ").append(pod.getLongitude()).append("\n");
-        }
-
-        // AKO IMAŠ 'notes' polje u Shipment entitetu, odkomentiraj ovu liniju:
-        // shipment.setNotes(podNotes.toString());
+        // 5. Kreiraj i logiraj POD podatke
+        String podReport = buildProofOfDeliveryReport(driverId, pod);
+        logger.info("Delivery completed: {}", podReport);
 
         Shipment updatedShipment = shipmentRepository.save(shipment);
         return mapToResponse(updatedShipment);
+    }
+
+    private String buildProofOfDeliveryReport(Long driverId, ProofOfDeliveryDTO pod) {
+        StringBuilder podNotes = new StringBuilder();
+        podNotes.append("DELIVERED by Driver ID: ").append(driverId).append("\n");
+        podNotes.append("Recipient: ").append(pod.getRecipientName()).append("\n");
+
+        if (pod.getNotes() != null) {
+            podNotes.append("Notes: ").append(pod.getNotes()).append("\n");
+        }
+
+        if (pod.getLatitude() != null && pod.getLongitude() != null) {
+            podNotes.append("GPS: ").append(pod.getLatitude()).append(", ").append(pod.getLongitude());
+        }
+
+        return podNotes.toString();
     }
 
     @Override
@@ -278,14 +292,14 @@ public class ShipmentServiceImpl implements ShipmentService {
     public ShipmentResponse reportIssue(Long shipmentId, Long driverId, IssueReportDTO issue) {
         // 1. Dohvati Shipment
         Shipment shipment = shipmentRepository.findById(shipmentId)
-                .orElseThrow(() -> new ResourceNotFoundException("Shipment", "ID", shipmentId));
+                .orElseThrow(() -> new ResourceNotFoundException(SHIPMENT, "ID", shipmentId));
 
         // 2. Provjeri je li Shipment assigniran ovom Driver-u
         Assignment assignment = assignmentRepository.findByShipmentId(shipmentId)
-                .orElseThrow(() -> new ConflictException("Shipment ID " + shipmentId + " is not assigned to any driver."));
+                .orElseThrow(() -> new ConflictException(SHIPMENT_ID + shipmentId + IS_NOT_ASSIGNED_TO_ANY_DRIVER));
 
         if (!assignment.getDriver().getId().equals(driverId)) {
-            throw new ConflictException("Shipment ID " + shipmentId + " is not assigned to driver ID " + driverId);
+            throw new ConflictException(SHIPMENT_ID + shipmentId + " is not assigned to driver ID " + driverId);
         }
 
         // 3. Provjeri status (mora biti IN_TRANSIT)
@@ -296,143 +310,28 @@ public class ShipmentServiceImpl implements ShipmentService {
         // 4. Označi kao DELAYED
         shipment.setStatus(ShipmentStatus.DELAYED);
 
-        // 5. Spremi issue report kao komentar
-        StringBuilder issueNotes = new StringBuilder();
-        issueNotes.append("ISSUE REPORTED by Driver ID: ").append(driverId).append("\n");
-        issueNotes.append("Type: ").append(issue.getIssueType()).append("\n");
-        issueNotes.append("Description: ").append(issue.getDescription()).append("\n");
-        if (issue.getEstimatedDelay() != null) {
-            issueNotes.append("Estimated Delay: ").append(issue.getEstimatedDelay()).append("\n");
-        }
-        if (issue.getLatitude() != null && issue.getLongitude() != null) {
-            issueNotes.append("GPS: ").append(issue.getLatitude()).append(", ").append(issue.getLongitude()).append("\n");
-        }
-
-        // AKO IMAŠ 'notes' polje u Shipment entitetu, odkomentiraj ovu liniju:
-        // shipment.setNotes(issueNotes.toString());
+        // 5. Kreiraj i logiraj issue report
+        String issueReport = buildIssueReport(driverId, issue);
+        logger.info("Shipment issue reported: {}", issueReport);
 
         Shipment updatedShipment = shipmentRepository.save(shipment);
         return mapToResponse(updatedShipment);
     }
+
+    private String buildIssueReport(Long driverId, IssueReportDTO issue) {
+        StringBuilder issueNotes = new StringBuilder();
+        issueNotes.append("ISSUE REPORTED by Driver ID: ").append(driverId).append("\n");
+        issueNotes.append("Type: ").append(issue.getIssueType()).append("\n");
+        issueNotes.append("Description: ").append(issue.getDescription()).append("\n");
+
+        if (issue.getEstimatedDelay() != null) {
+            issueNotes.append("Estimated Delay: ").append(issue.getEstimatedDelay()).append("\n");
+        }
+
+        if (issue.getLatitude() != null && issue.getLongitude() != null) {
+            issueNotes.append("GPS: ").append(issue.getLatitude()).append(", ").append(issue.getLongitude());
+        }
+
+        return issueNotes.toString();
+    }
 }
-
-
-//package hr.algebra.rapid.logisticsandfleetmanagementsystem.service.impl;
-//
-//import hr.algebra.rapid.logisticsandfleetmanagementsystem.domain.Shipment;
-//import hr.algebra.rapid.logisticsandfleetmanagementsystem.dto.ShipmentRequest;
-//import hr.algebra.rapid.logisticsandfleetmanagementsystem.dto.ShipmentResponse;
-//import hr.algebra.rapid.logisticsandfleetmanagementsystem.exceptions.ResourceNotFoundException;
-//import hr.algebra.rapid.logisticsandfleetmanagementsystem.exceptions.DuplicateResourceException; // Potrebno za provjeru jedinstvenosti
-//import hr.algebra.rapid.logisticsandfleetmanagementsystem.repository.ShipmentRepository;
-//import hr.algebra.rapid.logisticsandfleetmanagementsystem.service.ShipmentService;
-//import lombok.RequiredArgsConstructor;
-//import org.springframework.stereotype.Service;
-//import org.springframework.transaction.annotation.Transactional;
-//
-//import java.util.List;
-//import java.util.Optional;
-//import java.util.stream.Collectors;
-//
-//@Service
-//@RequiredArgsConstructor
-//public class ShipmentServiceImpl implements ShipmentService {
-//
-//    private final ShipmentRepository shipmentRepository;
-//
-//    // --- Metoda mapiranja (Entity -> Response DTO) ---
-//
-//    @Override
-//    public ShipmentResponse mapToResponse(Shipment shipment) {
-//        ShipmentResponse dto = new ShipmentResponse();
-//        dto.setId(shipment.getId());
-//        dto.setTrackingNumber(shipment.getTrackingNumber());
-//        dto.setDescription(shipment.getDescription());
-//        dto.setWeightKg(shipment.getWeightKg());
-//        dto.setVolumeM3(shipment.getVolumeM3());
-//        dto.setOriginAddress(shipment.getOriginAddress());
-//        dto.setDestinationAddress(shipment.getDestinationAddress());
-//        dto.setStatus(shipment.getStatus());
-//        dto.setExpectedDeliveryDate(shipment.getExpectedDeliveryDate());
-//        dto.setActualDeliveryDate(shipment.getActualDeliveryDate());
-//        return dto;
-//    }
-//
-//    // --- CRUD Implementacija ---
-//
-//    @Override
-//    public List<ShipmentResponse> findAll() {
-//        return shipmentRepository.findAll().stream()
-//                .map(this::mapToResponse)
-//                .collect(Collectors.toList());
-//    }
-//
-//    @Override
-//    public Optional<ShipmentResponse> findById(Long id) {
-//        return shipmentRepository.findById(id)
-//                .map(this::mapToResponse);
-//    }
-//
-//    @Override
-//    @Transactional
-//    public ShipmentResponse createShipment(ShipmentRequest request) {
-//        // 1. Provjera jedinstvenosti (ključna poslovna logika)
-//        if (shipmentRepository.findByTrackingNumber(request.getTrackingNumber()).isPresent()) {
-//            throw new DuplicateResourceException("Shipment with tracking number " + request.getTrackingNumber() + " already exists.");
-//        }
-//
-//        // 2. Mapiranje Request DTO-a u entitet
-//        Shipment shipment = new Shipment();
-//        shipment.setTrackingNumber(request.getTrackingNumber());
-//        shipment.setDescription(request.getDescription());
-//        shipment.setWeightKg(request.getWeightKg());
-//        shipment.setVolumeM3(request.getVolumeM3());
-//        shipment.setOriginAddress(request.getOriginAddress());
-//        shipment.setDestinationAddress(request.getDestinationAddress());
-//        shipment.setExpectedDeliveryDate(request.getExpectedDeliveryDate());
-//
-//        // 3. Postavljanje defaultnog statusa (poslovno pravilo)
-//        shipment.setStatus("PENDING");
-//
-//        // 4. Spremanje i mapiranje natrag u Response DTO
-//        Shipment savedShipment = shipmentRepository.save(shipment);
-//        return mapToResponse(savedShipment);
-//    }
-//
-//    @Override
-//    @Transactional
-//    public ShipmentResponse updateShipment(Long id, ShipmentRequest request) {
-//        // 1. Pronađi pošiljku
-//        Shipment shipment = shipmentRepository.findById(id)
-//                .orElseThrow(() -> new ResourceNotFoundException("Shipment", "ID", id));
-//
-//        // 2. Provjera jedinstvenosti za update (ako je trackingNumber promijenjen)
-//        Optional<Shipment> existingShipment = shipmentRepository.findByTrackingNumber(request.getTrackingNumber());
-//        if (existingShipment.isPresent() && !existingShipment.get().getId().equals(id)) {
-//            throw new DuplicateResourceException("Shipment with tracking number " + request.getTrackingNumber() + " already exists.");
-//        }
-//
-//        // 3. Ažuriranje polja
-//        shipment.setTrackingNumber(request.getTrackingNumber());
-//        shipment.setDescription(request.getDescription());
-//        shipment.setWeightKg(request.getWeightKg());
-//        shipment.setVolumeM3(request.getVolumeM3());
-//        shipment.setOriginAddress(request.getOriginAddress());
-//        shipment.setDestinationAddress(request.getDestinationAddress());
-//        shipment.setExpectedDeliveryDate(request.getExpectedDeliveryDate());
-//
-//        // Napomena: Status i actualDeliveryDate se obično ažuriraju kroz zasebne metode (npr. updateStatus)
-//
-//        // 4. Spremanje i povrat
-//        return mapToResponse(shipmentRepository.save(shipment));
-//    }
-//
-//    @Override
-//    @Transactional
-//    public void deleteShipment(Long id) {
-//        if (!shipmentRepository.existsById(id)) {
-//            throw new ResourceNotFoundException("Shipment", "ID", id);
-//        }
-//        shipmentRepository.deleteById(id);
-//    }
-//}
